chore: rename companyId to worksInCompany
